--- a/i3/config
+++ b/i3/config
@@ -2,6 +2,18 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+#autostart
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id playerctld daemon
+exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle"
+exec --no-startup-id xset r rate 300 30
+exec --no-startup-id synclient HorizTwoFingerScroll=1
+exec --no-startup-id compton --config /home/dima/.config/compton.conf 
+exec --no-startup-id polybar example
+exec --no-startup-id nitrogen --restore
+exec --no-startup-id /usr/lib/x86_64-linux-gnu/libexec/kdeconnectd
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t
+
 set $mod Mod4
 
 # This config file uses keycodes (bindsym) and was written for the QWERTY
@@ -9,41 +21,29 @@ set $mod Mod4
 #
 # To get a config file with the same key positions, but for your current
 # layout, use the i3-config-wizard
-#
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+# font pango:monospace 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/27ace75.png -t
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 
-#autostart
-# exec --no-startup-id compton --backend glx --paint-on-overlay --vsync opengl-swc
-exec --no-startup-id compton --config /home/dima/.config/compton.conf -b
-exec --no-startup-id i3block
-exec --no-startup-id nm-applet
-exec_always --no-startup-id "setxkbmap -model pc104 -layout us,ru -variant ,, -option grp:alt_shift_toggle"
-exec --no-startup-id gxkb
-exec --no-startup-id nitrogen --restore #wallpaper
-exec --no-startup-id /usr/lib/x86_64-linux-gnu/libexec/kdeconnectd
-exec --no-startup-id playerctld daemon
-
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -62,19 +62,13 @@ set $right l
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+t exec urxvt
-
-# kill focused window
-bindsym $mod+q kill
-
 # start dmenu (a program launcher)
 bindsym $mod+r exec --no-startup-id rofi -show
+# bindsym $mod+r exec --no-startup-id /home/dima/.config/rofi/launchers/misc/launcher.sh
 # A more modern dmenu replacement is rofi:
 # bindsym $mod+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+$left focus left
@@ -101,13 +95,13 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+Mod1+h split h
+bindsym $mod+Mod1+v split h
 
 # split in vertical orientation
-bindsym $mod+Mod1+v split v
+bindsym $mod+Mod1+h split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+F11 fullscreen toggle
+bindsym F11 fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 # bindsym $mod+s layout stacking
@@ -135,16 +129,16 @@ bindsym $mod+Mod1+f floating toggle
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:"
-set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6:"
-set $ws7 "7:"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
 set $ws8 "8"
-set $ws9 "9:"
-set $ws10 "10:"
+set $ws9 "9"
+set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -161,11 +155,7 @@ bindsym $mod+0 workspace number $ws10
 bindsym $mod+Mod1+k workspace next
 bindsym $mod+Mod1+j workspace prev
 
-# переход к последнему открытому окну
-bindsym $mod+x [urgent=latest] focus
-
 # move focused container to workspace
-
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -177,8 +167,6 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
@@ -192,69 +180,55 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 10 px or 10 ppt
-        bindsym $down       resize grow height 10 px or 10 ppt
-        bindsym $up         resize shrink height 10 px or 10 ppt
-        bindsym $right      resize grow width 10 px or 10 ppt
+        bindsym $left       resize shrink width 1 px or 1 ppt
+        bindsym $down       resize grow height 1 px or 1 ppt
+        bindsym $up         resize shrink height 1 px or 1 ppt
+        bindsym $right      resize grow width 1 px or 1 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
+        bindsym Left        resize shrink width 5 px or 5 ppt
+        bindsym Down        resize grow height 5 px or 5 ppt
+        bindsym Up          resize shrink height 5 px or 5 ppt
+        bindsym Right       resize grow width 5 px or 5 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
 }
 
 bindsym $mod+z mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        font pango:Vazir 8
- 	colors {
-         background         #504945
- 	    statusline         #d5c4a1
- 	    separator          #3c3836
- 	    focused_workspace  #3c3836 #32302f #fabd2f
- 	    active_workspace   #3c3836 #504945 #d5c4a1
- 	    inactive_workspace #3c3836 #504945 #d5c4a1
- 	    urgent_workspace   #7c6f64 #fabd2f #3c3836
- 	}
+# bar {
+#         font pango:Vazir 8
+#  	colors {
+#          background         #504945
+#  	    statusline         #d5c4a1
+#  	    separator          #3c3836
+#  	    focused_workspace  #3c3836 #32302f #fabd2f
+#  	    active_workspace   #3c3836 #504945 #d5c4a1
+#  	    inactive_workspace #3c3836 #504945 #d5c4a1
+#  	    urgent_workspace   #7c6f64 #fabd2f #3c3836
+#  	}
 
- 	strip_workspace_numbers yes
- 	separator_symbol " | "
- 	workspace_buttons yes
- 	position top
-    tray_padding 0
-    status_command /usr/local/bin/i3status -c /home/dima/.config/i3status/i3status.conf
-    # status_command i3blocks -c /home/dima/.config/i3blocks/i3blocks.conf
-}
+#  	strip_workspace_numbers yes
+#  	separator_symbol " | "
+#  	workspace_buttons yes
+#  	position top
+#     tray_padding 0
+#     status_command /usr/local/bin/i3status -c /home/dima/.config/i3status/i3status.conf
+# }
 
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.config/i3/config (or $XDG_CONFIG_HOME/i3/config if set) or
-# ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-exec i3-config-wizard
-
-#Рамки окон
+#borders without gaps
 # default_border pixel 1
 # default_floating_border pixel 1
 # hide_edge_borders none
 
 #gaps
-for_window [class=".*"] border pixel 1
+for_window [class=".*"] border pixel 2
 smart_gaps on
-gaps inner 5
+gaps inner 7
 gaps outer 0
 smart_borders on
 hide_edge_borders smart_no_gaps
@@ -263,14 +237,15 @@ hide_edge_borders smart_no_gaps
 focus_follows_mouse yes
 
 #keybind
-bindsym $mod+b exec firefox
+bindsym $mod+t exec urxvt
+bindsym $mod+Shift+q kill
 bindsym $mod+Escape exec xkill
-bindsym Print exec flameshot gui -p /home/dima/Изображения/
-bindsym $mod+F6 exec /home/dima/.config/i3/lock.sh
-bindsym Mod1+Tab exec rofi -show window
-bindsym $mod+f exec rofi -show file-browser
+bindsym $mod+F6 exec i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t
+bindsym Mod1+Tab exec rofi -show window -window-thumbnail 
 bindsym Mod1+Control+t exec /home/dima/.config/rofi/rofitr
 bindsym Mod1+Control+s exec /home/dima/.config/rofi/web-search.sh
+bindsym Mod1+Control+b exec /home/dima/.config/rofi/rofi-beats
+bindsym $mod+i exec urxvt -e vim /home/dima/.config/i3/config
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 25 # increase screen brightness
@@ -285,18 +260,51 @@ client.urgent           #7c6f64 #fabd2f #3c3836 #fabd2f
 #Assing programs to workspace
 for_window [class="URxvt"] move to workspace $ws1
 for_window [class="Firefox"] move to workspace $ws2
+for_window [class="Chromium-browser"] move to workspace $ws2
 for_window [class="KeePassXC"] move to workspace $ws3
-for_window [class="discord"] move to workspace $ws4
-for_window [class="Telegram"] move to workspace $ws5
-for_window [class="ViberPC"] move to workspace $ws5
-for_window [class="Joplin"] move to workspace $ws6
-for_window [class="Steam"] move to workspace $ws7
-for_window [class="retroarch"] move to workspace $ws7
-for_window [class="vlc"] move to workspace $ws9
+
+#Focus
+for_window [class="URxvt"] focus
+for_window [class="Firefox"] focus
+for_window [class="KeePassXC"] focus
+
+#floating
+for_window [class="Nitrogen"] floating enable, move absolute position center
+for_window [class="Blueman-manager"] floating enable, move absolute position center
 
 #sticky mode
 for_window [class="Firefox"] sticky enable
 for_window [class="Chromium-browser"] sticky enable
 for_window [class="vlc"] sticky enable
 
-floating_maximum_size 800 x 640
+floating_maximum_size 900 x 500
+
+#screenshot
+bindsym Print exec --no-startup-id /home/dima/.config/rofi/bin/menu_screenshot
+# mode "screenshot" {
+# 	# Fullscreen
+# 	bindsym f exec flameshot full -p /home/dima/Изображения/Screenshots
+
+# 	# Selection
+# 	bindsym s exec flameshot gui -p /home/dima/Изображения/Screenshots/
+
+#         # back to normal: Enter or Escape or $mod+r
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
+# bindsym Print mode "screenshot"
+
+#system
+bindsym $mod+Shift+Escape exec --no-startup-id ~/.config/rofi/bin/menu_powermenu
+# set $system (L)ock, (R)eboot, (S)hutdown
+# mode "$system" {
+# 	bindsym r exec reboot, mode "default"
+#     bindsym s exec shutdown now, mode "default"
+#     bindsym l exec i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t, mode "default"
+
+#         # back to normal: Enter or Escape or $mod+r
+#         bindsym Return mode "default"
+#         bindsym Escape mode "default"
+# }
+# bindsym $mod+Shift+Escape mode "$system"
+
