--- a/compton.conf
+++ b/compton.conf
@@ -1,22 +1,22 @@
-shadow = false;
+shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 0;
-shadow-offset-x = 0;
-shadow-offset-y = 0;
-shadow-opacity = 0.0;
+shadow-radius = 5;
+shadow-offset-x = 5;
+shadow-offset-y = 5;
+shadow-opacity = 0.7;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
-shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
-shadow-ignore-shaped = true;
-menu-opacity = 1.0;
-inactive-opacity = 1.0;
-active-opacity = 1.0;
-frame-opacity = 0.0;
+shadow-exclude = [ "name = 'Notification'",  "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "name  = 'Wine'", "class_g = 'Firefox' && argb", "class_g = 'photoshop.exe'"];
+shadow-ignore-shaped = false;
+menu-opacity = 1;
+# inactive-opacity = 0.0;
+# active-opacity = 1.0;
+frame-opacity = 1;
 inactive-opacity-override = false;
-alpha-step = 0.06;
+alpha-step = 0.6;
 inactive-dim = 0.0;
 blur-kern = "3x3box";
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
