--- a/i3/config
+++ b/i3/config
@@ -9,10 +9,10 @@ exec --no-startup-id "setxkbmap -model pc104 -layout us,ru -variant ,, -option g
 exec --no-startup-id xset r rate 300 30
 exec --no-startup-id synclient HorizTwoFingerScroll=1
 exec --no-startup-id compton --config /home/dima/.config/compton.conf 
-exec --no-startup-id polybar example
 exec --no-startup-id nitrogen --restore
+exec --no-startup-id polybar example
 exec --no-startup-id /usr/lib/x86_64-linux-gnu/libexec/kdeconnectd
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork -i /home/dima/Изображения/Обои/devilslaptop.png -t
 
 set $mod Mod4
 
@@ -28,7 +28,7 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
+font pango:Hack 10
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -42,8 +42,8 @@ font pango:DejaVu Sans Mono 8
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -58,9 +58,6 @@ set $up k
 set $down j
 set $left h
 set $right l
-
-# use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
 
 # start dmenu (a program launcher)
 bindsym $mod+r exec --no-startup-id rofi -show
@@ -109,23 +106,19 @@ bindsym F11 fullscreen toggle
 # bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Mod1+f floating toggle
+bindsym $mod+Mod1+f floating toggle, move absolute position center
 
-# change focus between tiling / floating windows
-# bindsym $mod+space focus mode_toggle
+# use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
 
-# focus the parent container
-# bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
+floating_maximum_size 900 x 500
 
 # move the currently focused window to the scratchpad
-# bindsym $mod+Shift+minus move scratchpad
+ bindsym $mod+minus move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-# bindsym $mod+minus scratchpad show
+ bindsym $mod+Shift+minus scratchpad show
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -170,7 +163,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -220,32 +213,50 @@ bindsym $mod+z mode "resize"
 #     status_command /usr/local/bin/i3status -c /home/dima/.config/i3status/i3status.conf
 # }
 
-#borders without gaps
+#borders
 # default_border pixel 1
 # default_floating_border pixel 1
 # hide_edge_borders none
+for_window [class=".*"] border pixel 2
+
+mode "borders" {
+    bindsym n border none; mode "default"
+    bindsym o border pixel 1; mode "default"
+    bindsym b border pixel 2; mode "default"
+
+   
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym $mod+Shift+b mode "borders"
 
 #gaps
-for_window [class=".*"] border pixel 2
 smart_gaps on
-gaps inner 7
+gaps inner 12
 gaps outer 0
 smart_borders on
 hide_edge_borders smart_no_gaps
 
+mode "gaps" {
+    bindsym n gaps inner all set 0; gaps outer all set 0; mode "default"
+    bindsym g gaps inner all set 12; gaps outer all set 0; mode "default"
+
+   
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym $mod+Shift+g mode "gaps"
 #mouse
 focus_follows_mouse yes
 
 #keybind
 bindsym $mod+t exec urxvt
 bindsym $mod+Shift+q kill
-bindsym $mod+Escape exec xkill
 bindsym $mod+F6 exec i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t
 bindsym Mod1+Tab exec rofi -show window -window-thumbnail 
 bindsym Mod1+Control+t exec /home/dima/.config/rofi/rofitr
 bindsym Mod1+Control+s exec /home/dima/.config/rofi/web-search.sh
 bindsym Mod1+Control+b exec /home/dima/.config/rofi/rofi-beats
-bindsym $mod+i exec urxvt -e vim /home/dima/.config/i3/config
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 25 # increase screen brightness
@@ -266,6 +277,7 @@ for_window [class="KeePassXC"] move to workspace $ws3
 #Focus
 for_window [class="URxvt"] focus
 for_window [class="Firefox"] focus
+for_window [class="Chromium-browser"] focus
 for_window [class="KeePassXC"] focus
 
 #floating
@@ -273,38 +285,38 @@ for_window [class="Nitrogen"] floating enable, move absolute position center
 for_window [class="Blueman-manager"] floating enable, move absolute position center
 
 #sticky mode
-for_window [class="Firefox"] sticky enable
-for_window [class="Chromium-browser"] sticky enable
-for_window [class="vlc"] sticky enable
-
-floating_maximum_size 900 x 500
+for_window [class="Firefox"] sticky enable, border none
+for_window [class="Chromium-browser"] sticky enable, borders none
+for_window [class="vlc"] sticky enable, border none
 
 #screenshot
-bindsym Print exec --no-startup-id /home/dima/.config/rofi/bin/menu_screenshot
-# mode "screenshot" {
-# 	# Fullscreen
-# 	bindsym f exec flameshot full -p /home/dima/Изображения/Screenshots
+#bindsym Print exec --no-startup-id /home/dima/.config/rofi/bin/menu_screenshot
+set $screenshot (F)ull, (S)elect
+mode "screenshot" {
+	# Fullscreen
+	bindsym f exec flameshot full -p /home/dima/Изображения/Screenshots
 
-# 	# Selection
-# 	bindsym s exec flameshot gui -p /home/dima/Изображения/Screenshots/
+	# Selection
+	bindsym s exec flameshot gui -p /home/dima/Изображения/Screenshots/
 
-#         # back to normal: Enter or Escape or $mod+r
-#         bindsym Return mode "default"
-#         bindsym Escape mode "default"
-# }
-# bindsym Print mode "screenshot"
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym Print mode "screenshot"
 
 #system
-bindsym $mod+Shift+Escape exec --no-startup-id ~/.config/rofi/bin/menu_powermenu
-# set $system (L)ock, (R)eboot, (S)hutdown
-# mode "$system" {
-# 	bindsym r exec reboot, mode "default"
-#     bindsym s exec shutdown now, mode "default"
-#     bindsym l exec i3lock --nofork -i /home/dima/Изображения/Обои/941429.png -t, mode "default"
-
-#         # back to normal: Enter or Escape or $mod+r
-#         bindsym Return mode "default"
-#         bindsym Escape mode "default"
-# }
-# bindsym $mod+Shift+Escape mode "$system"
+# bindsym $mod+Shift+Escape exec --no-startup-id ~/.config/rofi/bin/menu_powermenu
+set $system (L)ock, (R)eboot, (S)hutdown, s(U)spend, l(O)gout
+mode "$system" {
+	bindsym r exec systemctl reboot, mode "default"
+    bindsym s exec systemctl poweroff, mode "default"
+    bindsym l exec i3lock --nofork -i /home/dima/Изображения/Обои/devilslaptop.png -t, mode "default"
+    bindsym u exec systemctl suspend, mode "default"
+    bindsym o exec i3-msg exit, mode "default"
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+bindsym $mod+Shift+Escape mode "$system"
 
