--- a/polybar/config
+++ b/polybar/config
@@ -37,10 +37,8 @@ fixed-center = false
 background = 1d2021
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 2
 line-color = ${colors.primary}
-
-# border-color = ${background-alt}
 
 padding-left = 0
 padding-right = 1
@@ -48,51 +46,23 @@ padding-right = 1
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = ;font-0 = Hack:pixelsize=10;3
+font-0 = DejaVu Sans:pixelsize=10;3
 font-1 = siji:pixelsize=10;3
 font-2 = Font Awesome 5 Free:pixelsize=11;2
 font-3 = Font Awesome 5 Free Solid:pixelsize=11;2
 font-4 = Font Awesome 5 Brands:pixelsize=11;2
 font-5 = Weather Icons:size=12;1
 
-modules-left = i3 filesystem system-usb-mount
+modules-left = i3 filesystem system-usb-mount trash
 modules-center = 
 modules-right = openweathermap-fullfeatured cpu temperature memory wlan pulseaudio xkeyboard date menu
-
-; tray-position = right
-; tray-padding = 2
-;tray-background = #0063ff
-
-;wm-restack = bspwm
-;wm-restack = i3
-
-;override-redirect = true
-
-;scroll-up = bspwm-desknext
-;scroll-down = bspwm-deskprev
-
-;scroll-up = i3wm-wsnext
-;scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:30:...%
-
 [module/xkeyboard]
 type = internal/xkeyboard
-blacklist-0 = num lock
-
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-
-label-layout = %layout%
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-underline = ${colors.secondary}
 
 [module/filesystem]
 type = internal/fs
@@ -127,7 +97,7 @@ ws-icon-9 = 10;10
 
 
 label-mode-padding = 1
-label-mode-foreground = #000
+label-mode-foreground = ${colors.foreground}
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
@@ -151,8 +121,6 @@ label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-; Separator in between workspaces
-; label-separator = |
 
 [module/cpu]
 type = internal/cpu
@@ -173,26 +141,12 @@ type = internal/network
 interface = wls1
 interval = 1
 click-right = nm-connection-editor
-; format-connected = <ramp-signal> <label-connected>
 format-connected =  <label-connected>
-# format-connected-underline = #b8bb26
 
 label-connected =  %downspeed%  %upspeed%
 
-; format-disconnected =
-; format-disconnected =  <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected =   %downspeed%  %upspeed%
 format-disconnected-foreground = #fb4934
-
-;label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
@@ -212,36 +166,12 @@ type = internal/pulseaudio
 
 format-volume = <ramp-volume> <label-volume> 
 label-volume =  %percentage%%
-# label-volume-foreground = ${root.foreground}
-# format-volume-underline = #b8bb26
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
 click-right = pavucontrol
 label-muted =  %percentage%%
 label-muted-foreground = #fb4934
-# format-muted-underline = #fb4934
-
-bar-volume-width = 10
-bar-volume-foreground-0 = #b8bb26
-bar-volume-foreground-1 = #b8bb26
-bar-volume-foreground-2 = #98971a
-bar-volume-foreground-3 = #98971a
-bar-volume-foreground-4 = #fabd2f
-bar-volume-foreground-5 = #d79921
-bar-volume-foreground-6 = #fe8019
-bar-volume-foreground-7 = #d65d09
-bar-volume-foreground-8 = #fb4934
-bar-volume-foreground-9 = #cc241d
-
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [settings]
 screenchange-reload = true
@@ -285,3 +215,12 @@ exec = ~/.config/polybar/scripts/system-usb-mount.sh
 interval = 5
 click-left = ~/.config/polybar/scripts/system-usb-mount.sh --mount &
 click-right = ~/.config/polybar/scripts/system-usb-mount.sh --unmount &
+
+[module/trash]
+type = custom/script
+exec = /home/dima/.config/polybar/scripts/trash.sh
+interval = 60
+label = %output%
+format-prefix = " "
+click-left = urxvt -e ranger ~/.local/share/Trash/files
+click-right = trash-empty ;exec notify-send 'Trash cleaned'
