--- a/polybar/config
+++ b/polybar/config
@@ -23,7 +23,7 @@ foreground = ${xrdb:color7:#ebdbb2}
 foreground-alt = ${xrdb:color8:#a89984}
 primary = ${xrdb:color1:#fe8019}
 secondary = ${xrdb:color2:#b16286}
-alert = ${xrdb:color3:#fb4934}
+alert = ${xrdb:color3:#cc241d}
 
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -33,6 +33,7 @@ height = 20
 ;offset-y = 1%
 radius = 0
 fixed-center = false
+locale = ru_RU.UTF-8
 
 background = 1d2021
 foreground = ${colors.foreground}
@@ -51,14 +52,16 @@ font-1 = siji:pixelsize=10;3
 font-2 = Font Awesome 5 Free:pixelsize=11;2
 font-3 = Font Awesome 5 Free Solid:pixelsize=11;2
 font-4 = Font Awesome 5 Brands:pixelsize=11;2
-font-5 = Weather Icons:size=12;1
+font-5 = Weather Icons:size=11;2
 
 modules-left = i3 filesystem system-usb-mount trash
 modules-center = 
-modules-right = openweathermap-fullfeatured cpu temperature memory wlan pulseaudio xkeyboard date menu
+modules-right = openweathermap-fullfeatured temperature cpu memory wlan pulseaudio xkeyboard date notifications menu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+enable-ipc = true
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -74,6 +77,7 @@ mount-1 = /home
 label-mounted =  %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
+click-left = urxvt -e ranger
 
 [module/i3]
 type = internal/i3
@@ -85,16 +89,15 @@ wrapping-scroll = false
 ;pin-workspaces = true
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;4
-ws-icon-4 = 5;5
-ws-icon-5 = 6;6
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
 ws-icon-6 = 7;7
 ws-icon-7 = 8;8
 ws-icon-8 = 9;9
 ws-icon-9 = 10;10
-
 
 label-mode-padding = 1
 label-mode-foreground = ${colors.foreground}
@@ -103,7 +106,7 @@ label-mode-background = ${colors.primary}
 ; focused = Active workspace on focused monitor
 label-focused = %icon%
 label-focused-background = #282828
-label-focused-underline= #fabd2f
+label-focused-foreground= #d79921
 label-focused-padding = 1
 
 ; unfocused = Inactive workspace on any monitor
@@ -118,7 +121,7 @@ label-unfocused-padding = 1
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %icon%
-label-urgent-background = ${colors.alert}
+label-urgent-foreground = #cc241d
 label-urgent-padding = 1
 
 
@@ -126,15 +129,14 @@ label-urgent-padding = 1
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
 label = %percentage%%
 
 [module/memory]
 type = internal/memory
 interval = 5
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-label = %mb_used%
+label = %percentage_used%%
+click-left = urxvt -e htop -s PERCENT_MEM
 
 [module/wlan]
 type = internal/network
@@ -142,28 +144,23 @@ interface = wls1
 interval = 1
 click-right = nm-connection-editor
 format-connected =  <label-connected>
-
 label-connected =  %downspeed%  %upspeed%
+format-disconnected =  <label-disconnected>
+label-disconnected =  %downspeed%  %upspeed%
 
-label-disconnected =   %downspeed%  %upspeed%
 format-disconnected-foreground = #fb4934
 
 [module/date]
 type = internal/date
 interval = 1
-
-date = %a %d.%m.%Y
-
-time = %H:%M:%S
-
-format-prefix = 
-format-prefix-foreground = ${colors.foreground-alt}
-
+date = %a, %d.%m
+date-alt = %A, %d.%B.%Y
+time = %H:%M
+time-alt = %H:%M:%S
 label =  %date%   %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
-
 format-volume = <ramp-volume> <label-volume> 
 label-volume =  %percentage%%
 ramp-volume-0 = 
@@ -172,6 +169,7 @@ ramp-volume-2 = 
 click-right = pavucontrol
 label-muted =  %percentage%%
 label-muted-foreground = #fb4934
+use-ui-max = true
 
 [settings]
 screenchange-reload = true
@@ -187,11 +185,6 @@ margin-bottom = 5
 
 ; vim:ft=dosini
 
-# [module/weather]
-# type = custom/script
-# exec = curl -s 'wttr.in/Kiev\?format=%c%20%t%20%p&lang=ru' | cut -c 1-13 | cat
-# interva = 300
-
 [module/openweathermap-fullfeatured]
 type = custom/script
 exec = ~/.config/polybar/scripts/openweathermap-fullfeatured.sh
@@ -201,12 +194,14 @@ label-font = 6
 [module/menu]
 type = custom/text
 content = 
-click-left = ~/.config/rofi/bin/menu_powermenu
+click-left = ~/.config/rofi/system
 
 [module/temperature]
 type = custom/script
-interval = 5
 exec = sensors | grep "[0,9]" | awk 'NR==2{ print $3 }' | cut -c 2-9 | cat
+format-prefix = ""
+label = %output%
+interval = 5
 
 
 [module/system-usb-mount]
@@ -224,3 +219,9 @@ label = %output%
 format-prefix = " "
 click-left = urxvt -e ranger ~/.local/share/Trash/files
 click-right = trash-empty ;exec notify-send 'Trash cleaned'
+
+[module/notifications]
+type = custom/text
+content = 
+click-left = dunstctl set-paused toggle
+click-right = dunstctl history-pop 
