--- a/compton.conf
+++ b/compton.conf
@@ -3,13 +3,13 @@ no-dnd-shadow = true;
 no-dock-shadow = true;
 clear-shadow = true;
 shadow-radius = 5;
-shadow-offset-x = 5;
-shadow-offset-y = 5;
+shadow-offset-x = 3;
+shadow-offset-y = 3;
 shadow-opacity = 0.7;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
-shadow-exclude = [ "name = 'Notification'",  "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "name  = 'Wine'", "class_g = 'Firefox' && argb", "class_g = 'photoshop.exe'"];
+shadow-exclude = [ "name = 'Notification'",  "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "name  = 'Wine'", "class_g = 'Firefox' && argb", "class_g = 'photoshop.exe'", "class_g = 'Chromium-browser' && argb", "class_g = 'Dunst'"];
 shadow-ignore-shaped = false;
 menu-opacity = 1;
 # inactive-opacity = 0.0;
