--- a/polybar/config
+++ b/polybar/config
@@ -33,7 +33,7 @@ height = 20
 ;offset-y = 1%
 radius = 0
 fixed-center = false
-locale = ru_RU.UTF-8
+locale = uk_UA.UTF-8
 
 background = 1d2021
 foreground = ${colors.foreground}
@@ -54,9 +54,9 @@ font-3 = Font Awesome 5 Free Solid:pixelsize=11;2
 font-4 = Font Awesome 5 Brands:pixelsize=11;2
 font-5 = Weather Icons:size=11;2
 
-modules-left = i3 filesystem system-usb-mount trash
+modules-left = i3 filesystem system-usb-mount updates-pacman-aurhelper 
 modules-center = 
-modules-right = openweathermap-fullfeatured temperature cpu memory wlan pulseaudio xkeyboard date notifications menu
+modules-right = openweathermap-fullfeatured info-airqualityindex temperature cpu memory wlan network-localip pulseaudio xkeyboard date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -88,14 +88,14 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;7
-ws-icon-7 = 8;8
+ws-icon-0 = 1;1: 
+ws-icon-1 = 2;2: 
+ws-icon-2 = 3;3: 
+ws-icon-3 = 4;4: 
+ws-icon-4 = 5;5: 
+ws-icon-5 = 6;6: 
+ws-icon-6 = 7;7: 
+ws-icon-7 = 8;8: 
 ws-icon-8 = 9;9
 ws-icon-9 = 10;10
 
@@ -105,7 +105,7 @@ label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %icon%
-label-focused-background = #282828
+# label-focused-background = #282828
 label-focused-foreground= #d79921
 label-focused-padding = 1
 
@@ -142,7 +142,7 @@ click-left = urxvt -e htop -s PERCENT_MEM
 type = internal/network
 interface = wls1
 interval = 1
-click-right = nm-connection-editor
+click-right = urxvt -e nmtui
 format-connected =  <label-connected>
 label-connected =  %downspeed%  %upspeed%
 format-disconnected =  <label-disconnected>
@@ -154,7 +154,7 @@ format-disconnected-foreground = #fb4934
 type = internal/date
 interval = 1
 date = %a, %d.%m
-date-alt = %A, %d.%B.%Y
+date-alt = %A, %d %B %Y
 time = %H:%M
 time-alt = %H:%M:%S
 label =  %date%   %time%
@@ -220,8 +220,42 @@ format-prefix = " "
 click-left = urxvt -e ranger ~/.local/share/Trash/files
 click-right = trash-empty ;exec notify-send 'Trash cleaned'
 
-[module/notifications]
+[module/dunst]
 type = custom/text
 content = 
-click-left = dunstctl set-paused toggle
+click-left = notify-send "Dunst resume" && dunstctl set-paused toggle
 click-right = dunstctl history-pop 
+
+# [module/dunst]
+# type = custom/ipc
+# initial = 1
+# hook-0 = echo "%{A1:notify-send "DUNST_PAUSE" && polybar-msg hook dunst 2:}%{A}" &
+# hook-1 = echo "%{A1:notify-send "DUNST_RESUME" && polybar-msg hook dunst 1:}%{A}" &
+
+# [module/dunst]
+# type = custom/script
+# exec = ~/.config/polybar/scripts/dunst_notification_switch.sh
+# tail = true
+# click-left = ~/.config/polybar/scripts/dunst_notification_switch.sh toggle &
+
+[module/updates-pacman-aurhelper]
+type = custom/script
+exec = ~/.config/polybar/scripts/updates-pacman-aurhelper.sh
+interval = 600
+
+[module/network-localip]
+type = custom/script
+exec = ~/.config/polybar/scripts/network-localip.sh
+interval = 60
+
+[module/info-airqualityindex]
+type = custom/script
+exec =  ~/.config/polybar/scripts/info-airqualityindex.sh
+interval = 600
+
+[module/redshift]
+type = custom/text
+content = 
+click-left = redshift -l 50.45466:30.523850 -P -O 3500
+click-right = redshift -l 50.45466:30.523850 -P -O 5600
+
