--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -495,7 +495,7 @@ map p`<any> paste dest=%any_path
 map p'<any> paste dest=%any_path
 
 map dD console delete
-map dT console trash
+# map dT console trash
 
 map dd cut
 map ud uncut
@@ -761,6 +761,13 @@ copytmap <ESC> q Q w <C-c>
 # Kdeconnect
 map es shell kdeconnect-cli --share %S --name Redmi\ Note\ 9\ Pro 
 
+# qrcp
+map eS shell qrcp %S
+
+# gpg
+map eC shell gpg -c %S && srm -E %S
+map eD shell gpg %S && srm -E %S
+
 # Archivs
 map ee extract
 map ec compress
@@ -791,8 +798,20 @@ map gm cd /home/dima/Музыка
 map gc cd /home/dima/.config
 map gu cd /media
 map gk cd /home/dima/Книги
+map gs cd /home/dima/Изображения/Screenshots
 
 map Rr shell convert %s -rotate +90 %s
 map Rl shell convert %s -rotate -90 %s
 
 map ei shell sudo dpkg -i %s
+map dt shell trash-put %s
+
+# Cmus
+map ep cmus_play
+map el cmus_lib
+map eq cmus_queue
+
+#Open
+map eo shell ./%s
+
+default_linemode devicons2
